--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,11 @@ html {
 /* min body height */
 
 body {
+  position: relative;
   background-color: var(--clr-light-3);
   font-size: var(--fs-400);
   font-family: var(--font-family);
+  min-height: 100vh;
 }
 
 /* responsive images/videos */
@@ -152,6 +154,10 @@ input[type="number"] {
 /* Main Container */
 
 main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: grid;
   background-color: var(--clr-light-5);
   width: 100%;
@@ -159,7 +165,6 @@ main {
   height: 64rem;
   box-shadow: 10px 10px 10px hsl(0, 0%, 0%, 0.03);
   grid-template-columns: 1fr 2fr;
-  margin: 13rem auto 0 auto;
   padding: 1.4rem;
   border-radius: 14px;
 }
@@ -469,11 +474,11 @@ section {
 }
 
 @media only screen and (width <= 866px) {
-  html {
-  }
-
   main {
     position: relative;
+    top: unset;
+    left: unset;
+    transform: translate(0, 0);
     max-width: unset;
     width: 100%;
     height: 100vh;
@@ -571,4 +576,3 @@ section {
     padding: 3.6rem 3.6rem;
   }
 }
-
